--- a/raffle-sol/package.json
+++ b/raffle-sol/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^1.0.0",
+    "@openzeppelin/contracts": "^5.0.2",
     "@uniswap/sdk-core": "^4.2.0",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "@uniswap/v3-sdk": "^3.11.0"
   }
 }
