--- a/raffle-sol/package.json
+++ b/raffle-sol/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
     "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
     "@uniswap/v3-periphery": "^1.4.4",
     "@wagmi/core": "^2.6.17",
@@ -18,6 +19,7 @@
   "dependencies": {
     "@chainlink/contracts": "^1.0.0",
     "@openzeppelin/contracts": "^5.0.2",
+    "@openzeppelin/test-helpers": "^0.5.16",
     "@uniswap/sdk-core": "^4.2.0",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "@uniswap/v3-sdk": "^3.11.0"
